https sem autenticação 4

--- a/Teste/Teste/Teste.csproj
+++ b/Teste/Teste/Teste.csproj
@@ -2,7 +2,17 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <UserSecretsId>8ca67069-757d-4852-a9b9-271b4c5a5812</UserSecretsId>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.9" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\teste_sdubmodule_item\Submodulo\Submodulo.csproj" />
+  </ItemGroup>
 
 
 </Project>
