--- a/Teste/Teste/Teste.csproj
+++ b/Teste/Teste/Teste.csproj
@@ -2,7 +2,17 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <UserSecretsId>3f31ffa3-ab35-445b-9b68-cbcbe3ed6cf2</UserSecretsId>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.9" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\teste_sdubmodule_item\Submodulo\Submodulo.csproj" />
+  </ItemGroup>
 
 
 </Project>
